test/corpus/conditional_execution.txt
================
AND operator
================

copy file1.txt file2.txt && echo Success

---

(program
  (cond_exec
    (cmd
      (command_name)
      (argument_list
        (argument_value)
        (argument_value)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
OR operator
================

copy file1.txt file2.txt || echo Failed

---

(program
  (cond_exec
    (cmd
      (command_name)
      (argument_list
        (argument_value)
        (argument_value)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Chained AND operators
================

echo one && echo two && echo three

---

(program
  (cond_exec
    (cond_exec
      (cmd
        (command_name)
        (argument_list
          (argument_value)))
      (cmd
        (command_name)
        (argument_list
          (argument_value))))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Chained OR operators
================

echo one || echo two || echo three

---

(program
  (cond_exec
    (cond_exec
      (cmd
        (command_name)
        (argument_list
          (argument_value)))
      (cmd
        (command_name)
        (argument_list
          (argument_value))))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Mixed AND and OR operators
================

echo one && echo two || echo three

---

(program
  (cond_exec
    (cond_exec
      (cmd
        (command_name)
        (argument_list
          (argument_value)))
      (cmd
        (command_name)
        (argument_list
          (argument_value))))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
AND with inline parenthesized right side
================

echo one && (echo two)

---

(program
  (cond_exec
    (cmd
      (command_name)
      (argument_list
        (argument_value)))
    (parenthesized
      (cmd
        (command_name)
        (argument_list
          (argument_value))))))

================
AND with multi-line parenthesized right side
================

echo one && (
echo two
)

---

(program
  (cond_exec
    (cmd
      (command_name)
      (argument_list
        (argument_value)))
    (parenthesized
      (cmd
        (command_name)
        (argument_list
          (argument_value))))))

================
Caret-escaped && splits into escaped & and command separator
================

echo foo ^&& echo bar && echo baz

---

(program
  (command_sep
    (cmd
      (command_name)
      (argument_list
        (argument_value)
        (argument_value)))
    (cond_exec
      (cmd
        (command_name)
        (argument_list
          (argument_value)))
      (cmd
        (command_name)
        (argument_list
          (argument_value))))))

================
Caret-escaped || splits into escaped | and pipe
================

echo foo ^|| echo bar && echo baz

---

(program
  (cond_exec
    (pipe_stmt
      (cmd
        (command_name)
        (argument_list
          (argument_value)
          (argument_value)))
      (cmd
        (command_name)
        (argument_list
          (argument_value))))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Double caret-escaped ^&^& keeps both as argument text
================

echo foo ^&^& echo bar && echo baz

---

(program
  (cond_exec
    (cmd
      (command_name)
      (argument_list
        (argument_value)
        (argument_value)
        (argument_value)
        (argument_value)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Simple command separator with &
================

echo one & echo two

---

(program
  (command_sep
    (cmd
      (command_name)
      (argument_list
        (argument_value)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Redirect then AND
================

cmd > out.txt && echo done

---

(program
  (cond_exec
    (redirect_stmt
      (cmd
        (command_name))
      (redirection
        (redirect_op)
        (redirect_target)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Redirect then OR
================

cmd > out.txt || echo fail

---

(program
  (cond_exec
    (redirect_stmt
      (cmd
        (command_name))
      (redirection
        (redirect_op)
        (redirect_target)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
Redirect then command separator
================

cmd > out.txt & echo two

---

(program
  (command_sep
    (redirect_stmt
      (cmd
        (command_name))
      (redirection
        (redirect_op)
        (redirect_target)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
CALL then OR
================

call mvn clean package -q || echo failed

---

(program
  (cond_exec
    (call_stmt
      (command_name)
      (argument_list
        (argument_value)
        (argument_value)
        (argument_value)))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))
