test/corpus/for_loops.txt
================
FOR basic
================

for %%i in (*.txt) do echo %%i

---

(program
  (for_stmt
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /L numeric
================

for /l %%i in (1,1,10) do echo %%i

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /F file parsing
================

for /f "tokens=1,2 delims=," %%a in (data.csv) do echo %%a

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /R recursive
================

for /r %%f in (*.log) do echo %%f

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))

================
FOR /R with env var path
================

for /r %TEMP% %%i in (*.tmp) do echo %%i

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (for_set)
    (cmd
      (command_name)
      (argument_list
        (variable_reference)))))
