test/corpus/for_variable_edge.txt
================
For /l with throwaway variable name (dot)
================

for /l %%. in () do echo hi

---

(program
  (for_stmt
    (for_options)
    (for_variable)
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))

================
For with digit variable name
================

for %%1 in (a) do echo hi

---

(program
  (for_stmt
    (for_variable)
    (for_set
      (for_set_literal))
    (cmd
      (command_name)
      (argument_list
        (argument_value)))))
