test/corpus/set_display.txt
================
Set display unquoted (no equals)
================

set PATH

---

(program
  (variable_assignment
    (set_keyword)
    (variable_name)))

================
Set display quoted prefix
================

set "wd%%~i"

---

(program
  (variable_assignment
    (set_keyword)
    (variable_name)
    (variable_name)
    (variable_name)))
