test/corpus/set_prompt_quoted.txt
================
Set /p with quoted variable name (empty prompt)
================

set /p "ln="

---

(program
  (variable_assignment
    (set_keyword)
    (prompt_assignment
      (set_option)
      (variable_name))))

================
Set /p with empty variable name (echo -n idiom)
================

set /P =%~1

---

(program
  (variable_assignment
    (set_keyword)
    (prompt_assignment
      (set_option)
      (assignment_value
        (variable_reference)))))

================
Set /p with quoted var name and prompt text
================

set /p "answer=Continue? "

---

(program
  (variable_assignment
    (set_keyword)
    (prompt_assignment
      (set_option)
      (variable_name)
      (quoted_assignment_value
        (assignment_literal)))))
